// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar should render a default avatar 1`] = `
<div
  class="avatar one"
>
  <span
    alt="user"
    aria-hidden="false"
    aria-label="user"
    class="initials"
  >
    JS
  </span>
</div>
`;

exports[`Avatar should render an avatar with an automated color variant, based on a hashValue 1`] = `
<div
  class="avatar two"
>
  <span
    alt="user"
    aria-hidden="false"
    aria-label="user"
    class="initials"
  >
    JS
  </span>
</div>
`;

exports[`Avatar should render an avatar with color variant netural 1`] = `
<div
  class="avatar neutral"
>
  <span
    alt="user"
    aria-hidden="false"
    aria-label="user"
    class="initials"
  >
    JS
  </span>
</div>
`;

exports[`Avatar should render an avatar with color variant one 1`] = `
<div
  class="avatar one"
>
  <span
    alt="user"
    aria-hidden="false"
    aria-label="user"
    class="initials"
  >
    JS
  </span>
</div>
`;

exports[`Avatar should render an avatar with custom props 1`] = `
<div
  class="avatar one"
  id="custom props avatar"
>
  <span
    alt="user"
    aria-hidden="false"
    aria-label="user"
    class="initials"
  >
    JS
  </span>
</div>
`;

exports[`Avatar should render an avatar with initials and aria hidden 1`] = `
<div
  class="avatar one"
>
  <span
    alt="user"
    aria-hidden="true"
    aria-label="user"
    class="initials"
  >
    JJ
  </span>
</div>
`;

exports[`Avatar should render an avatar with provided size 1`] = `
<div
  class="avatar one"
  style="font-size:5em"
>
  <span
    alt="user"
    aria-hidden="false"
    aria-label="user"
    class="initials"
  >
    JS
  </span>
</div>
`;

exports[`Avatar should render an isDeceased avatar 1`] = `
<div
  class="avatar one is-deceased"
>
  <span
    alt="user"
    aria-hidden="false"
    aria-label="user"
    class="initials"
  >
    JS
  </span>
</div>
`;

exports[`Avatar should render fallback initials when invalid image is passed in with initials 1`] = `
<div
  class="avatar five image"
>
  <div>
    <div
      class="hidden"
    >
      <img
        alt="placeholder"
        class="image cover default image"
        src="https://path/to/invalid_image.jpg"
      />
    </div>
    <div>
      <span
        alt="placeholder"
        aria-hidden="false"
        aria-label="placeholder"
        class="initials"
      >
        JD
      </span>
    </div>
  </div>
</div>
`;

exports[`Avatar should render fallback user avatar when invalid image is passed in without initials 1`] = `
<div
  class="avatar five image"
>
  <div>
    <div
      class="hidden"
    >
      <img
        alt="placeholder"
        class="image cover default image"
        src="https://path/to/invalid_image.jpg"
      />
    </div>
    <div>
      <span
        alt="placeholder"
        aria-hidden="false"
        aria-label="placeholder"
        class="initials"
      >
        JS
      </span>
    </div>
  </div>
</div>
`;

exports[`Avatar should render image avatar when image is passed in 1`] = `
<div
  class="avatar five image"
>
  <div>
    <div
      class="hidden"
    >
      <img
        alt="placeholder"
        class="image cover default image"
        src="test-file-stub"
      />
    </div>
    <div>
      <span
        alt="placeholder"
        aria-hidden="false"
        aria-label="placeholder"
        class="initials"
      >
        JS
      </span>
    </div>
  </div>
</div>
`;

exports[`Avatar should render one initial avatar when one initial is passed in 1`] = `
<div
  class="avatar one"
>
  <span
    alt="user"
    aria-hidden="false"
    aria-label="user"
    class="initials"
  >
    J
  </span>
</div>
`;

exports[`Avatar should render two initials avatar when more than two initials are passed in 1`] = `
<div
  class="avatar one"
>
  <span
    alt="user"
    aria-hidden="false"
    aria-label="user"
    class="initials"
  >
    JJ
  </span>
</div>
`;

exports[`Avatar should render two initials avatar when two initials are passed in 1`] = `
<div
  class="avatar one"
>
  <span
    alt="user"
    aria-hidden="false"
    aria-label="user"
    class="initials"
  >
    JS
  </span>
</div>
`;
